@@ -2,6 +2,10 @@
 
 Changes with Apache 2.3.13
 
+  *) mod_include: Merge directory configs instead of one SSI* config directive
+     causing all other per-directory SSI* config directives to be reset.
+     [Stefan Fritsch]
+
   *) mod_charset_lite: Remove DebugLevel option in favour of per-module
      loglevel. [Stefan Fritsch]
 
